fixed scroll behavior to not jump when other items disappear

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -201,15 +201,14 @@ body {
 
 // WORK
 
-#work-content {
-  height: 400vh;
+.work-content {
+  height: auto;
   right: 0;
   background-color: $highlight-color;
   padding: 0
 }
 
 .work-item {
-  height: 100vh;
   overflow: hidden;
 }
 
@@ -329,6 +328,10 @@ body {
 }
 
 // WORK - HOVER
+.work-item {
+  position: relative
+}
+
 .work-item.closed:hover {
   cursor: pointer;
 
@@ -372,11 +375,12 @@ body {
     opacity: 0;
     transition: 0.2s;
   }
+
+  .border-wrapper:hover {
+    filter: grayscale(0) sepia(100%) contrast(100%) saturate(7.5);
+  }
 }
 
-.border-wrapper:hover {
-  filter: grayscale(0) sepia(100%) contrast(100%) saturate(7.5);
-}
 
 // CONTACT
 #contact-header {
@@ -388,42 +392,6 @@ body {
   }
 }
 
-///////
-
-#work-header {
-  transition: 1s width cubic-bezier(.77,0,.175,1) 1.35s;
-}
-
-#work-content {
-  transition: 1s width cubic-bezier(.77,0,.175,1) 1.35s;
-}
-
-.work-item-header {
-  width: 100%;
-  height: 100%;
-  display: flex
-}
-
-.work-item-header.omni {
-  min-height: 270px;
-  overflow: hidden;
-  transition: 1s height cubic-bezier(.77,0,.175,1) 2.35s;
-}
-
-.hide-section {
-  display: none;
-}
-.minimized {
-  width: 25%
-}
-.expanded {
-  width: 75%;
-}
-.small-header {
-  height: 40vh
-}
-
-/////////////
 
 //*** BIGGER PHONES
 @media screen and (min-width: 321px) {
@@ -507,7 +475,8 @@ body {
   #work-header {
     position: absolute;
     top: 0;
-    left: 0
+    left: 0;
+    z-index: 200;
   }
 
   .fixed-header {
@@ -515,11 +484,13 @@ body {
   }
 
   .top {
-    top: 75% !important;
+    top: 35.5% !important;
   }
 
-  #work-content {
-    position: absolute;
+  .work-content {
+    position: relative;
+    z-index: 100;
+    left: 33.3%;
   }
 
 }
@@ -547,6 +518,57 @@ body {
     }
 }
 
+
+///////
+
+#work-header {
+  transition: 1s width cubic-bezier(.77,0,.175,1) 0.8s;
+}
+
+.work-content {
+  transition: 1s cubic-bezier(.77,0,.175,1) 0.8s;
+}
+
+.work-item-header {
+  width: 100%;
+  height: 100vh;
+  display: flex
+}
+
+.work-item-header.omni, .work-item-header.rdi {
+  min-height: 270px;
+  overflow: hidden;
+  transition: 1s height cubic-bezier(.77,0,.175,1) 1.8s;
+}
+
+.work-item-content {
+  background-color: white;
+  text-align: left;
+  padding: 40px;
+}
+
+.hide-section {
+  display: none;
+}
+.minimized {
+  width: 25%;
+  border-right: 1px solid #dcdcdc
+}
+.expanded {
+  width: 75%;
+  left: 25%
+}
+.small-header {
+  height: 40vh
+}
+
+.tryt{
+  height: 100% !important;
+  transition: 0.5s;
+  transition-delay: 1s
+}
+
+/////////////
 
 
 // --------------------------------
